tests/paczka2/big_fuzzy/65440863.err
Error in line 3: xK95 A196 38,8
Error in line 8: LwqI A196 40,2
Error in line 24: iHQ4vl0 A223 60,2
Error in line 29: pCxiS5qN1Mk A353 1,7
Error in line 33: otU0 A223 61,4
Error in line 44: LwqI A592 353,0
Error in line 58: pCxiS5qN1Mk A223 16,0
Error in line 56: A353 A353 57,0
Error in line 50: iHQ4vl0 A353 33,8
Error in line 71: LwqI A223 46,5
Error in line 88: xnjnpDKA A196 168,8
Error in line 90: xnjnpDKA A223 39,5
Error in line 91: A353 A353 37,5
Error in line 99: iHQ4vl0 A196 67,1
Error in line 108: xK95 A223 95,0
Error in line 109: xnjnpDKA A592 83,0
Error in line 128: A353 A196 57,0
Error in line 104: otU0 A223 375,6
Error in line 123: pCxiS5qN1Mk A592 52,3
Error in line 130: LwqI A353 206,2
Error in line 148: iHQ4vl0 A196 74,0
Error in line 158: iHQ4vl0 A353 09,4
Error in line 162: pCxiS5qN1Mk A353 75,6
Error in line 150: iHQ4vl0 A353 0,1
Error in line 163: pCxiS5qN1Mk A592 8,1
Error in line 166: xK95 A196 37,9
Error in line 153: LwqI A223 15,4
Error in line 134: A353 A223 1,7
Error in line 169: xK95 A592 73,9
Error in line 177: iHQ4vl0 A196 36,52
Error in line 182: xK95 A196 78,4
Error in line 194: A353 A223 62,8
Error in line 189: LwqI A353 43,7
Error in line 200: iHQ4vl0 A353 76,7
Error in line 198: LwqI A592 37,6
Error in line 199: pCxiS5qN1Mk A196 94,4
Error in line 219: pCxiS5qN1Mk A223 290,88
Error in line 218: xnjnpDKA A196 96,1
Error in line 202: otU0 A592 55,4
Error in line 224: LwqI A196 59,8
Error in line 241: otU0 A196 58,4
Error in line 238: xnjnpDKA A353 43,1
Error in line 209: pCxiS5qN1Mk A223 96,3
Error in line 246: xK95 A592 45,0
